# junk

./: .gitignore  ActiveSwitchSensitivityTest.vala  AnimationGifTest.vala  App.vala  Application.vala  ButtonsSensitivityTest.vala  HeaderLabelTest.vala  LICENSE.txt  Makefile  PantheonTweaks.vala  README.md  StaticGifTest.vala  build.sh  com.github.ryonakano.file-chooser-test.yml  com.github.ryonakano.portal-location-demo.yml  com.github.ryonakano.tweaks.yml  daizu.sh  ip_update.sh  meson.build  portal-location-demo.desktop  tweaks.sh  v1.vala
debian/: changelog
etc/: issue  issue.net  os-release
origins/: open.Yellow.os
pt/: GalaAppearance.vala  WM.vala  pt.vala
src/: Application.vala  Installer.vala  MainWindow.vala
